--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <img class="photo" src="./img/cheese.jfif" data-name="cheese" alt="cheese">
 
         <div class="all-ansurs">
-            <button onclick="handlUnser(event)" unsur="dolphin" class="ansur">its a
+            <button onclick="handlUnser(event)" unsur="dolphin" class="ansur">its 
                 <span class="unserText">dolphin</span> </button>
-            <button onclick="handlUnser(event)" unsur="cheese" class="ansur">its a
+            <button onclick="handlUnser(event)" unsur="cheese" class="ansur">its 
                 <span class="unserText">cheese</span>
             </button>
         </div>
